fixed who we are page alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -208,7 +208,7 @@ img {
     padding: 0 10px;
 
     img {
-      border: 0.5px solid;
+      border: 1px dashed;
 
     }
   }
@@ -349,7 +349,6 @@ img {
   /* Article Component */
   .article {
     margin: auto;
-    max-width: 1320px;
   }
 
   .article .articleTitle {
@@ -359,6 +358,11 @@ img {
     padding-left: 30px;
     background-color: var(--secondary-background);
     color: var(--primary-text);
+    .widthWrapper {
+      padding-left: 10px;
+      margin: 0 auto;
+      max-width: 1320px;
+    }
   }
 
 
@@ -374,6 +378,11 @@ img {
       width: 68%;
       margin: auto;
     }
+
+    h3, h5, li {
+      line-height: 1.6rem;
+    }
+
     hr {
       width: 80%;
       margin: auto;
@@ -393,7 +402,7 @@ img {
     }
 
     h5 , li{
-      font-size: 100%;
+      font-size: 110%;
       font-weight: 300;
     }
   }
